libipt: initial support

--- a/TODO
+++ b/TODO
@@ -3,7 +3,6 @@ Test review:
 
 final-gcc fails
 final-libtool fails
-gdb test fails
 all stage test ??
 
 Fix:
@@ -56,5 +55,6 @@ TODO:
 * certifi: apply debian patch https://salsa.debian.org/debian/python-certifi/-/blob/debian/master/debian/patches/0001-Use-Debian-provided-etc-ssl-certs-ca-certificates.crt.patch
            to get certificates from system-wide ca-certificates package
 	   (/etc/ssl/certs)
-* gdb: enable support for libipt, --with-xxhash, --with-babeltrace,
-              --enable-source-highlight
+* gdb:
+  enable support for --with-xxhash, --with-babeltrace, --enable-source-highlight
+  review remaining failing tests
