--- a/TODO
+++ b/TODO
@@ -56,5 +56,5 @@ TODO:
            to get certificates from system-wide ca-certificates package
 	   (/etc/ssl/certs)
 * gdb:
-  enable support for --with-xxhash, --with-babeltrace, --enable-source-highlight
+  enable support for --with-babeltrace, --enable-source-highlight
   review remaining failing tests
