--- a/TODO
+++ b/TODO
@@ -56,5 +56,9 @@ TODO:
            to get certificates from system-wide ca-certificates package
 	   (/etc/ssl/certs)
 * gdb:
-  enable support for --with-babeltrace, --enable-source-highlight
+  enable support for --enable-source-highlight
   review remaining failing tests
+* babeltrace: depends on SWIG 2.0+ to enable python support
+* glib: enable documentation generation
+* debuginfod: deps from gcc gdb curl (test?) binutils
+* elfutils: build with debuginfod server support (depends on libmicrohttpd)
